--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     </head>
     <body>
         <h1>Benvenuti alla prima lezione di HTML</h1>
+        <h2>Spero troviate i concetti espressi in questa lezione interessanti</h2>
     </body>
 </html>
