--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+l<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -7,7 +7,6 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Benvenuti alla prima lezione di HTML</h1>
-        <h2>Spero troviate i concetti espressi in questa lezione interessanti</h2>
+        
     </body>
 </html>
