--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@ l<!DOCTYPE html>
         <title>Document</title>
     </head>
     <body>
-        
+        <!-- Header della pagina -->
+        <header>
+
+        </header>
+        <!-- Fine header della pagina -->
+        <!-- Parte contenutistica -->
+        <main>
+
+        </main>
+        <!-- Fine parte contenutistica -->
+        <!-- Footer della pagina -->
+        <footer>
+
+        </footer>
+        <!-- Fine footer della pagina -->
     </body>
 </html>
