--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-l<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -9,7 +9,17 @@ l<!DOCTYPE html>
     <body>
         <!-- Header della pagina -->
         <header>
-
+            <h1>Incremental and Decremental Support Vector Machine Learning</h1>
+            <hr>
+            <section> <!-- il TAG Section necessita di un tad "h" da "h2" ad "h6" -->
+                <h3>Gert Cauwenberghs</h3>
+                <p>
+                    CLSP, ECE Dept.<br>
+                    Jhon Hopkins University<br>
+                    Baltimore, MD 21218<br>
+                    <em>gert@jhu.ed</em>
+                </p>
+            </section>
         </header>
         <!-- Fine header della pagina -->
         <!-- Parte contenutistica -->
