Fine main section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Paper Scientifico</title>
     </head>
     <body>
         <!-- Header della pagina -->
@@ -24,6 +24,24 @@
         <!-- Fine header della pagina -->
         <!-- Parte contenutistica -->
         <main>
+            <section>
+                <h2>Abstract</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, voluptatem similique vero provident ducimus nulla numquam vel error non, veniam modi consequatur ad autem ratione quisquam recusandae. Recusandae, iure illo?
+                </p>
+                <ol>
+                    <li>
+                        <strong>Introduction</strong>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero mollitia velit recusandae culpa impedit a tempora sunt minima? Unde natus fuga praesentium tempore necessitatibus molestiae ipsam, voluptatum est mollitia delectus?
+                        </p>
+                    </li>
+                    <li>
+                        <img src="" alt="immagine vettoriale">
+                    </li>
+
+                </ol>
+            </section>
 
         </main>
         <!-- Fine parte contenutistica -->
