--- a/index.html
+++ b/index.html
@@ -39,15 +39,13 @@
                     <li>
                         <img src="" alt="immagine vettoriale">
                     </li>
-
                 </ol>
             </section>
-
         </main>
         <!-- Fine parte contenutistica -->
         <!-- Footer della pagina -->
         <footer>
-
+            <a href="www.google.it">Go to Wikipedia</a>
         </footer>
         <!-- Fine footer della pagina -->
     </body>
