Aggiunti commenti e terminato codice

--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
         <!-- Parte contenutistica -->
         <main>
             <section>
+                <!-- Testo introduttivo -->
                 <h2>Abstract</h2>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, voluptatem similique vero provident ducimus nulla numquam vel error non, veniam modi consequatur ad autem ratione quisquam recusandae. Recusandae, iure illo?
                 </p>
+                <!-- Fine testo introduttivo -->
+                <!-- Ordered list per ulteriori informazioni -->
                 <ol>
                     <li>
                         <strong>Introduction</strong>
@@ -39,7 +42,8 @@
                     <li>
                         <img src="" alt="immagine vettoriale">
                     </li>
-                </ol>
+                </ol> 
+                <!-- Fine ordered list -->
             </section>
         </main>
         <!-- Fine parte contenutistica -->
